debian-installer (20230218) UNRELEASED; urgency=medium

  * Bump Linux kernel ABI to 6.1.0-5.
  * Add pigz to Build-Depends.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 19 Feb 2023 18:03:33 +0100

debian-installer (20230217) unstable; urgency=medium

  [ Steve McIntyre ]
  * Switch to using bookworm artwork for the splash screens (Emerald).

  [ Cyril Brulebois ]
  * Update translation-status for the release.
  * Fix build-depends-on-1-revision lintian warning for u-boot-imx and
    u-boot-sunxi.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 17 Feb 2023 04:22:37 +0100

debian-installer (20230207) unstable; urgency=medium

  [ Samuel Thibault ]
  * Revert the build-dependencies changes of "Add support for cross-building".
  * Build-depend on bogl-utils instead of libbogl-dev for getting bdftobogl.

  [ Cyril Brulebois ]
  * Bump Linux kernel ABI to 6.1.0-3.
  * Update MIRROR example with a better value (http://deb.debian.org/debian).
  * Update translation-status for the release.

  [ Holger Wansing ]
  * Add ka.utf with needed characters for Georgian language, to fix broken
    rendering in text installer. Closes: #1017435

  [ Alper Nebi Yasak ]
  * [amd64, arm64] Build netboot images for ChromeOS devices
    - Make the disk images reproducible
    - Add the images to manifests
    - Refactor into a Makefile target

 -- Cyril Brulebois <kibi@debian.org>  Tue, 07 Feb 2023 14:59:08 +0100

debian-installer (20220914) unstable; urgency=medium

  [ Samuel Thibault ]
  * Double the number of available inodes on the hurd initrd.
  * Start speech synthesis after 30s timeout.

  [ Youngtaek Yoon ]
  * Support multiple udeb components.

  [ Vagrant Cascadian ]
  * [armhf] Add support for Bananapi_M2_Ultra (Closes: #982913).
  * [armhf] Update MX53LOCO filename with newer u-boot.

  [ John Paul Adrian Glaubitz ]
  * ia64: Remove ide-core-modules and ide-modules from pkg-lists
  * m68k: Remove ide-core-modules and ide-modules from pkg-lists