@@ -156,5 +156,5 @@ arch_depthcharge:
 		--target $(TEMP_DEPTHCHARGE)/disk.img \
 		$(TEMP_DEPTHCHARGE)/kernel.img
 	depthchargectl bless -v -i 1 $(TEMP_DEPTHCHARGE)/disk.img
-	gzip -9nf $(TEMP_DEPTHCHARGE)/kernel.img
-	gzip -9nf $(TEMP_DEPTHCHARGE)/disk.img
+	pigz -9nmf $(TEMP_DEPTHCHARGE)/kernel.img
+	pigz -9nmf $(TEMP_DEPTHCHARGE)/disk.img
