@@ -41,19 +41,19 @@ netboot_images_concatenateable: $(TEMP_KERNEL) $(TEMP_INITRD) $(TEMP_DTBS)
 		echo "Providing u-boot binaries for $$target ..." ; \
 		gen-hd-image -v -s "$(IMAGE_SIZE)" -p 32768 -b firmware -o $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
 		TARGET=/usr/lib/u-boot/$${target} u-boot-install-sunxi $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
-		gzip -9nf $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
+		pigz -9nmf $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
 	done
 	for target in firefly-rk3399 pinebook-pro-rk3399 rockpro64-rk3399 rock64-rk3328 rock-pi-4-rk3399; do \
 		echo "Providing u-boot binaries for $$target ..." ; \
 		gen-hd-image -v -p 32768 -s "$(IMAGE_SIZE)" -b firmware -o $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
 		TARGET=/usr/lib/u-boot/$${target} u-boot-install-rockchip $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
-		gzip -9nf $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
+		pigz -9nmf $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
 	done
 	for target in puma-rk3399 ; do \
 		echo "Providing u-boot binaries for $$target ..." ; \
 		gen-hd-image -v -p 32768 -s "$(IMAGE_SIZE)" -b firmware -o $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
 		TARGET=/usr/lib/u-boot/$${target} UBOOT_OFFSET=512 u-boot-install-rockchip $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
-		gzip -9nf $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
+		pigz -9nmf $(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.$${target}.img ; \
 	done
 	gen-hd-image -v -z -p 32768 -b firmware -s "$(IMAGE_SIZE)" -o "$(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/firmware.none.img"
 	gen-hd-image -v -z -p 32768 -b partition -s "$(IMAGE_SIZE)" -i "$(TEMP)/netboot_images_concatenateable" -o "$(SOME_DEST)/$(EXTRANAME)/SD-card-images/$(CONCATENATEABLE_SUFFIX)/partition.img"
