@@ -16,7 +16,7 @@ seagate:
 	mkdir $(TEMP)/noninteractive-preseed
 	cp boot/arm/ssh-noninteractive.preseed $(TEMP)/noninteractive-preseed/preseed.cfg
 	(cd $(TEMP)/noninteractive-preseed && find . | sort | cpio --quiet -o -H newc) > $(TEMP)/noninteractive-preseed-initrd
-	gzip $(TEMP)/noninteractive-preseed-initrd
+	pigz -nm $(TEMP)/noninteractive-preseed-initrd
 	cat $(TEMP_INITRD) $(TEMP)/noninteractive-preseed-initrd.gz > $(TEMP)/noninteractive-initrd.gz
 	mkimage -A arm -O linux -T ramdisk -C none -a 0x0 -e 0x0 -n "debian-installer ramdisk" -d $(TEMP)/noninteractive-initrd.gz $(SOME_DEST)/$(EXTRANAME)seagate/personal-cloud/uInitrd
 	update-manifest $(SOME_DEST)/$(EXTRANAME)seagate/personal-cloud/uInitrd "Debian installer ramdisk"
