@@ -15,14 +15,14 @@ u-boot-binaries:
 	      echo "Providing u-boot binaries for $$1 ..."; \
 	      cp "$$2" "$(SOME_DEST)/$(EXTRANAME)/$$1/"; \
 	      dd 2>/dev/null if="$$2" of="$(SOME_DEST)/$(EXTRANAME)/$$1/$$1.sdcard.img" bs=512 seek="$$3"; \
-	      gzip -9 -n "$(SOME_DEST)/$(EXTRANAME)/$$1/$$(basename $$2)"; \
+	      pigz -9nm "$(SOME_DEST)/$(EXTRANAME)/$$1/$$(basename $$2)"; \
 	    fi; \
 	    if [ -n "$$4" ]; then \
 	      cp "$$4" "$(SOME_DEST)/$(EXTRANAME)/$$1/"; \
 	      dd 2>/dev/null if="$$4" of="$(SOME_DEST)/$(EXTRANAME)/$$1/$$1.sdcard.img" bs=512 seek="$$5" conv=notrunc; \
-	      gzip -9 -n "$(SOME_DEST)/$(EXTRANAME)/$$1/$$(basename $$4)"; \
+	      pigz -9nm "$(SOME_DEST)/$(EXTRANAME)/$$1/$$(basename $$4)"; \
 	    fi; \
-	    gzip -9 -n "$(SOME_DEST)/$(EXTRANAME)/$$1/$$1.sdcard.img"; \
+	    pigz -9nm "$(SOME_DEST)/$(EXTRANAME)/$$1/$$1.sdcard.img"; \
 	    update-manifest "$(SOME_DEST)/$(EXTRANAME)$$1" "u-boot image for $$1"; \
 	  fi ;\
 	done < boot/arm/u-boot-image-config
