@@ -143,7 +143,7 @@ endif
 			echo "*** Failed to add win32-loader, probably out of space." >&2) ; \
 	fi
 
-	$(if $(GZIPPED),gzip -nv9f $(TEMP_BOOT))
+	$(if $(GZIPPED),pigz -nmv9f $(TEMP_BOOT))
 
 # Set up syslinux help screens.
 .PHONY: arch_boot_screens
@@ -463,8 +463,8 @@ arch_depthcharge:
 		--target $(TEMP_DEPTHCHARGE)/disk.img \
 		$(TEMP_DEPTHCHARGE)/kernel.img
 	depthchargectl bless -v -i 1 $(TEMP_DEPTHCHARGE)/disk.img
-	gzip -9nf $(TEMP_DEPTHCHARGE)/kernel.img
-	gzip -9nf $(TEMP_DEPTHCHARGE)/disk.img
+	pigz -9nmf $(TEMP_DEPTHCHARGE)/kernel.img
+	pigz -9nmf $(TEMP_DEPTHCHARGE)/disk.img
 
 .PHONY: xen_config
 xen_config:
